# verse-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/ast/: mod.rs
src/compiler/: ast.rs  compiler.rs  const_pool.rs  ir.rs  lexer.rs  mod.rs  parser.rs  semantic.rs
src/compiler/parser/: mod.rs
src/core/: mod.rs  symbol.rs  types.rs
src/debug/: mod.rs
src/diagnostic/: mod.rs
src/error/: mod.rs
src/eval/: mod.rs  type_expr.rs
src/ir/: mod.rs
src/lexer/: mod.rs
src/parser/: const_pool.rs  mod.rs
src/runtime/: builtin_funcs.rs  heap.rs  mod.rs
src/semantic/: binary_expr.rs  builtins.rs  mod.rs  type_check.rs  type_expr.rs
src/vm/: global_vars.rs  mod.rs
