[package]
name = "verse"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
codespan-reporting = "0.13.1"
derive-new = "0.7.0"
derive_more = { version = "2.1.1", features = ["constructor", "display", "from"] }
logos = "0.16.1"
num_enum = "0.7.6"
ordermap = "1.2.0"
thiserror = "2.0.18"
